# new_mtg

./: .env  .gitignore  Cargo.toml
migrations/2023-12-10-070149_mtg_cards/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
