[package]
name = "new_mtg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["postgres", "32-column-tables"] }
diesel-derive-newtype = "2.1.0"
diesel_json = "0.2.1"
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
